# aws_parameter_update

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: tests.yml
src/: lib.rs  main.rs  parameter.rs  tests.rs
