[package]
name = "aws_parameter_update"
version = "0.4.1"
authors = ["Lane Sawyer <cratesio@lanesawyer.dev>"]
edition = "2018"
description = "A small tool used to quickly update simple AWS Parameters."
license = "MIT"
repository = "https://github.com/lanesawyer/aws_parameter_update"
documentation = "https://docs.rs/aws_parameter_update"
readme = "README.md"

[lib]
name = "aws_parameter_update"
path = "src/lib.rs"

[[bin]]
name = "apu"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
log = "0.4.14"
rusoto_core = "0.46"
rusoto_ssm = "0.46"
simple_logger = "1.11.0"
tokio = { version = "1.1.0", features = ["full"] }
tokio-test = "0.4.0"
yaml-rust = "0.4"
