[package]
name = "aws_parameter_update"
version = "0.5.0"
authors = ["Lane Sawyer <cratesio@lanesawyer.dev>"]
edition = "2018"
description = "A small tool used to quickly update simple AWS Parameters."
license_file = "LICENSE"
homepage = "https://github.com/lanesawyer/aws_parameter_update"
repository = "https://github.com/lanesawyer/aws_parameter_update"
documentation = "https://docs.rs/aws_parameter_update"
readme = "README.md"
keywords = ["aws", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "aws_parameter_update"
path = "src/lib.rs"

[[bin]]
name = "apu"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.42"
clap = "2.33.3"
log = "0.4.14"
rusoto_core = "0.47"
rusoto_ssm = "0.47"
simple_logger = "1.12.0"
tokio = { version = "1.5.0", features = ["full"] }
tokio-test = "0.4.1"
yaml-rust = "0.4.5"
