[package]
name = "aws_parameter_update"
version = "0.5.1"
authors = ["Lane Sawyer <cratesio@lanesawyer.dev>"]
edition = "2018"
description = "A small tool used to quickly update simple AWS Parameters."
license-file = "LICENSE"
homepage = "https://github.com/lanesawyer/aws_parameter_update"
repository = "https://github.com/lanesawyer/aws_parameter_update"
documentation = "https://docs.rs/aws_parameter_update"
readme = "README.md"
keywords = ["aws", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "aws_parameter_update"
path = "src/lib.rs"

[[bin]]
name = "apu"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.56"
clap = "2.34.0"
log = "0.4.16"
rusoto_core = "0.47.0"
rusoto_ssm = "0.48.0"
simple_logger = "2.1.0"
tokio = { version = "1.9.0", features = ["full"] }
tokio-test = "0.4.2"
yaml-rust = "0.4.5"
